improved symk_usage notebook

--- a/notebooks/symk_usage.ipynb
+++ b/notebooks/symk_usage.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "ee1679d7",
+   "metadata": {},
+   "source": [
+    "# Multi-Solution Generation: Using SymK in the Unified Planning Library"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "54204a66",
@@ -17,19 +25,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f1e78bc4",
+   "metadata": {},
+   "source": [
+    "## A simple example\n",
+    "\n",
+    "We use the iconic gripper domain, where the goal is to move balls from room A to room B with a gripper that has two arms, which we read in as pddl files."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "db40758b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read a simple PDDL gripper problem from file\n",
-    "\n",
     "reader = PDDLReader()\n",
     "pddl_problem = reader.parse_problem(\"gripper-domain.pddl\", \"gripper-prob01.pddl\")\n",
-    "pddl_problem.add_quality_metric(MinimizeSequentialPlanLength())\n",
-    "\n",
-    "# Validation and cost computation\n",
+    "pddl_problem.add_quality_metric(MinimizeSequentialPlanLength())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79b2ba86",
+   "metadata": {},
+   "source": [
+    "## Validatior\n",
+    "We define two functions that serve as helper functions to evaluate the found plans and calculate the cost of the plans."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb32d7fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def get_plan_cost(problem, plan):\n",
     "    pv = PlanValidator(problem_kind=problem.kind)\n",
     "    pv_res = pv.validate(problem, plan)\n",
@@ -46,8 +78,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "edeba1e7",
+   "metadata": {},
+   "source": [
+    "## Finding a single optimal solution\n",
+    "We solve our gripper problem optimally with SymK."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "23a8eefa",
    "metadata": {},
    "outputs": [
@@ -55,9 +96,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[96m\u001b[1mNOTE: To disable printing of planning engine credits, add this line to your code: `up.shortcuts.get_environment().credits_stream = None`\n",
-      "\u001b[0m\u001b[96m  *** Credits ***\n",
-      "\u001b[0m\u001b[96m  * In operation mode `OneshotPlanner` at line 3 of `/tmp/ipykernel_79903/2906960709.py`, \u001b[0m\u001b[96myou are using the following planning engine:\n",
+      "\u001b[96m  *** Credits ***\n",
+      "\u001b[0m\u001b[96m  * In operation mode `OneshotPlanner` at line 1 of `/tmp/ipykernel_79998/3546280737.py`, \u001b[0m\u001b[96myou are using the following planning engine:\n",
       "\u001b[0m\u001b[96m  * Engine name: SymK\n",
       "  * Developers:  David Speck (cf. https://github.com/speckdavid/symk/blob/master/README.md )\n",
       "\u001b[0m\u001b[96m  * Description: \u001b[0m\u001b[96mSymK is a state-of-the-art domain-independent optimal and top-k planner.\u001b[0m\u001b[96m\n",
@@ -78,8 +118,6 @@
     }
    ],
    "source": [
-    "# Solve problem optimally with SymK (bidirectional symbolic search)\n",
-    "\n",
     "with OneshotPlanner(name='symk') as planner:\n",
     "    result = planner.solve(pddl_problem) # output_stream=sys.stdout\n",
     "    if result.status in unified_planning.engines.results.POSITIVE_OUTCOMES:\n",
@@ -90,8 +128,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4fbbd43c",
+   "metadata": {},
+   "source": [
+    "## Finding multiple optimal solution\n",
+    "We solve our gripper problem with SymK and ask for three optimal solutions, which are reported."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "8d28bee7",
    "metadata": {},
    "outputs": [
@@ -100,57 +147,55 @@
      "output_type": "stream",
      "text": [
       "\u001b[96m  *** Credits ***\n",
-      "\u001b[0m\u001b[96m  * In operation mode `AnytimePlanner` at line 5 of `/tmp/ipykernel_79903/3273943265.py`, \u001b[0m\u001b[96myou are using the following planning engine:\n",
+      "\u001b[0m\u001b[96m  * In operation mode `AnytimePlanner` at line 3 of `/tmp/ipykernel_79998/1171804862.py`, \u001b[0m\u001b[96myou are using the following planning engine:\n",
       "\u001b[0m\u001b[96m  * Engine name: SymK\n",
       "  * Developers:  David Speck (cf. https://github.com/speckdavid/symk/blob/master/README.md )\n",
       "\u001b[0m\u001b[96m  * Description: \u001b[0m\u001b[96mSymK is a state-of-the-art domain-independent optimal and top-k planner.\u001b[0m\u001b[96m\n",
       "\u001b[0m\u001b[96m\n",
       "\u001b[0mPlan 1: SequentialPlan:\n",
-      "    pick(ball3, rooma, right)\n",
-      "    pick(ball2, rooma, left)\n",
-      "    move(rooma, roomb)\n",
-      "    drop(ball3, roomb, right)\n",
-      "    drop(ball2, roomb, left)\n",
-      "    move(roomb, rooma)\n",
+      "    pick(ball2, rooma, right)\n",
       "    pick(ball1, rooma, left)\n",
+      "    move(rooma, roomb)\n",
+      "    drop(ball2, roomb, right)\n",
+      "    drop(ball1, roomb, left)\n",
+      "    move(roomb, rooma)\n",
+      "    pick(ball3, rooma, left)\n",
       "    pick(ball4, rooma, right)\n",
       "    move(rooma, roomb)\n",
-      "    drop(ball1, roomb, left)\n",
+      "    drop(ball3, roomb, left)\n",
       "    drop(ball4, roomb, right) with cost 11.\n",
       "\n",
       "Plan 2: SequentialPlan:\n",
-      "    pick(ball3, rooma, right)\n",
-      "    pick(ball2, rooma, left)\n",
-      "    move(rooma, roomb)\n",
-      "    drop(ball3, roomb, right)\n",
-      "    drop(ball2, roomb, left)\n",
-      "    move(roomb, rooma)\n",
+      "    pick(ball2, rooma, right)\n",
       "    pick(ball1, rooma, left)\n",
+      "    move(rooma, roomb)\n",
+      "    drop(ball2, roomb, right)\n",
+      "    drop(ball1, roomb, left)\n",
+      "    move(roomb, rooma)\n",
+      "    pick(ball3, rooma, left)\n",
       "    pick(ball4, rooma, right)\n",
       "    move(rooma, roomb)\n",
       "    drop(ball4, roomb, right)\n",
-      "    drop(ball1, roomb, left) with cost 11.\n",
+      "    drop(ball3, roomb, left) with cost 11.\n",
       "\n",
       "Plan 3: SequentialPlan:\n",
-      "    pick(ball2, rooma, left)\n",
+      "    pick(ball2, rooma, right)\n",
+      "    pick(ball1, rooma, left)\n",
+      "    move(rooma, roomb)\n",
+      "    drop(ball2, roomb, right)\n",
+      "    drop(ball1, roomb, left)\n",
+      "    move(roomb, rooma)\n",
       "    pick(ball3, rooma, right)\n",
+      "    pick(ball4, rooma, left)\n",
       "    move(rooma, roomb)\n",
       "    drop(ball3, roomb, right)\n",
-      "    drop(ball2, roomb, left)\n",
-      "    move(roomb, rooma)\n",
-      "    pick(ball1, rooma, left)\n",
-      "    pick(ball4, rooma, right)\n",
-      "    move(rooma, roomb)\n",
-      "    drop(ball1, roomb, left)\n",
-      "    drop(ball4, roomb, right) with cost 11.\n",
+      "    drop(ball4, roomb, left) with cost 11.\n",
       "\n",
       "SymK (with optimality guarantee) found 3 optimal plans with cost 11.\n"
      ]
     }
    ],
    "source": [
-    "# Find 5 optimal plans with SymK\n",
-    "\n",
     "plans = []\n",
     "\n",
     "with AnytimePlanner(name='symk-opt', params={\"number_of_plans\": 3}) as planner:\n",
@@ -167,8 +212,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1fc495cb",
+   "metadata": {},
+   "source": [
+    "## Finding all optimal solution\n",
+    "We find all optimal solutions using SymK. We report the number of existing optimal plans and their cost."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "69c01782",
    "metadata": {},
    "outputs": [
@@ -177,7 +231,7 @@
      "output_type": "stream",
      "text": [
       "\u001b[96m  *** Credits ***\n",
-      "\u001b[0m\u001b[96m  * In operation mode `AnytimePlanner` at line 5 of `/tmp/ipykernel_79903/462799821.py`, \u001b[0m\u001b[96myou are using the following planning engine:\n",
+      "\u001b[0m\u001b[96m  * In operation mode `AnytimePlanner` at line 5 of `/tmp/ipykernel_79998/198799663.py`, \u001b[0m\u001b[96myou are using the following planning engine:\n",
       "\u001b[0m\u001b[96m  * Engine name: SymK\n",
       "  * Developers:  David Speck (cf. https://github.com/speckdavid/symk/blob/master/README.md )\n",
       "\u001b[0m\u001b[96m  * Description: \u001b[0m\u001b[96mSymK is a state-of-the-art domain-independent optimal and top-k planner.\u001b[0m\u001b[96m\n",
@@ -189,7 +243,7 @@
       "\n",
       "SymK (with optimality guarantee) found 384 plans!\n",
       "\n",
-      "Validation of plans...\n",
+      "Calculate the cost of the plans found...\n",
       "SymK (with optimality guarantee) found 384 plans with cost 11.\n"
      ]
     }
@@ -220,6 +274,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "68b9240a",
+   "metadata": {},
+   "source": [
+    "## Find multiple solutions ordered by cost\n",
+    "Again, we solve our gripper problem and ask for 500 plans, from which 384 plans are optimal with cost 11 and the remaining 116 of"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "253b5799",
@@ -230,7 +293,7 @@
      "output_type": "stream",
      "text": [
       "\u001b[96m  *** Credits ***\n",
-      "\u001b[0m\u001b[96m  * In operation mode `AnytimePlanner` at line 4 of `/tmp/ipykernel_79903/192906054.py`, \u001b[0m\u001b[96myou are using the following planning engine:\n",
+      "\u001b[0m\u001b[96m  * In operation mode `AnytimePlanner` at line 4 of `/tmp/ipykernel_79998/2464694441.py`, \u001b[0m\u001b[96myou are using the following planning engine:\n",
       "\u001b[0m\u001b[96m  * Engine name: SymK\n",
       "  * Developers:  David Speck (cf. https://github.com/speckdavid/symk/blob/master/README.md )\n",
       "\u001b[0m\u001b[96m  * Description: \u001b[0m\u001b[96mSymK is a state-of-the-art domain-independent optimal and top-k planner.\u001b[0m\u001b[96m\n",
@@ -242,7 +305,7 @@
       "\n",
       "SymK found 500 plans!\n",
       "\n",
-      "Validation of plans...\n",
+      "Calculate the cost of the plans found...\n",
       "SymK found 384 plans with cost 11.\n",
       "SymK found 116 plans with cost 12.\n"
      ]
